# scx-recipes

./: .eslintrc.json  .gitignore  QWEN.md  README.md  commitlint.config.js  design.md  index.html  map.md  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  task.md  task_v2.md  vite.config.ts
.qwen/: plan.md  project_wiki.md  ui_task.md
.specify/memory/: constitution.md
scripts/: test-platforms.sh
specs/001-offline-health-diet-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  amap_config.example.toml  amap_config.toml  sample_recipes.json  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/location/: amap_client.rs  amap_config.rs  amap_types.rs  delivery_service.rs  ingredient_store.rs  mod.rs  restaurant_finder.rs
src-tauri/src/recommendation/: engine.rs  engine_test.rs  mod.rs  rules.rs
src-tauri/src/storage/: database.rs  mod.rs  models.rs  models_test.rs
src-tauri/src/utils/: mod.rs  performance.rs
src/hooks/: useAmapLocation.tsx  useLoadingState.ts  useLocation.tsx  useMapLoader.tsx  useNavigation.ts  useNavigation.tsx  useRestaurantMap.tsx
src/lib/: ErrorContext.css  ErrorContext.tsx  ThemeContext.tsx  amapConfig.ts  amapService.ts  api.ts  performance.ts  types.ts
src/styles/: globals.css  theme-config.ts
src/utils/: mapUtils.ts
tests/e2e/: privacy_compliance.test.ts  user_workflows.test.ts
tests/integration/: api_integration.test.ts  (+1 more)
tests/setup/: test-config.ts
(+35 files in other folders)
