[package]
name = "scx_recipes"
version = "0.1.0"
description = "A Tauri App for offline health diet recommendations"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "scx_recipes_lib"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-shell = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
